# RM-EC-Demo-SharedLib--CMake

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  script.py
.github/workflows/: publish-github-release.yml  release.yml
cmake/: arm-none-eabi.cmake  arm_compile_check.cpp
containers/: SpscZeroCopyQueue.hpp
src/: .clangd  memory.hpp
src/_inc/: configuration.hpp  ecx_config_default.hpp  ecx_config_template.hpp
src/containers/: SpscZeroCopyAtomicQueue.hpp  SpscZeroCopyQueue.hpp
src/proto/: cobs.hpp  crc.hpp
tests/: .clangd  CMakeLists.txt  test_cobs.cpp  test_crc.cpp  test_pid.cpp  test_spsc_zero_copy_queue.cpp
tests/configs/: ecx_config_usage_assert.hpp
tests/configs/usage_assert/: ecx_config.hpp
tests/containers/: test_SpscZeroCopyQueue.cpp
tests/inc/common/: config_utils.hpp  ecx_config_general.hpp  ecx_config_no_dev_debug.hpp  ecx_config_no_usage_assert.hpp  ecx_config_no_usage_check.hpp
tests/unit/containers/: CMakeLists.txt  test_SpscZeroCopyQueue_BadUsage.cpp
tests/unit/containers/SpscZeroCopyAtomicQueue/: CMakeLists.txt  test_SpscZeroCopyAtomicQueue.cpp  test_SpscZeroCopyAtomicQueue_BadUsage.cpp
tests/unit/containers/SpscZeroCopyQueue/: test_SpscZeroCopyQueue_BadUsage.cpp
tests/unit/containers/usage_assert/: test_SpscZeroCopyQueue_Death.cpp
tests/unit/test_configuration/: CMakeLists.txt  ecx_config.hpp  test_default_config_path.cpp  test_no_user_config.cpp
